# tango-ai

./: LICENSE  Pipfile  README.md  app.py  pyproject.toml
backend/: main.ipynb  tango.py
backend/storage/: default__vector_store.json  docstore.json  index_store.json
frontend/: app.py
frontend/views/: logo.py
src/: app.py  citation.py  engine.py  enums.py  prompt_templates.py  utils.py
src/storage/chemistry/: index_store.json
