[tool.poetry]
name = "tango-ai"
version = "0.1.0"
description = ""
authors = ["Varun Swaminathan <85042815+flerovious@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
streamlit = "^1.28.2"
llama-index = "^0.9.36"
llama-hub = "^0.0.47.post1"
python-dotenv = "^1.0.0"
pypdf = "^3.17.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
